[tool.poetry]
name = "pochi"
version = "0.1.0"
description = ""
authors = ["Michael Jordan <mjthecoder53161@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.74.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
