[tool.poetry]
name = "pochi"
version = "0.1.0"
description = ""
authors = ["Michael Jordan <mjthecoder53161@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.74.1"}
hdwallet = "^2.1.1"
python-decouple = "^3.6"
web3 = "^5.28.0"
bit = "^0.8.0"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
